[package]
name = "json-shootout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_json = "1.0.69"
libproc = "0.10.0"
jemallocator = "0.3.2"
simd-json = { version = "0.4.8", features = ["known-key"] }

[profile.release]
lto = "fat"
codegen-units = 1
